# android-cmake-template

./: AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt  README.md  makefile
src/com/android/cmake/template/: MainActivity.java
src/com/example/helloandroid/: MainActivity.java
